<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">One Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="message1">Enter the correct sequence of keys to unlock!</string>
    <string name="develop">Developed by SRJ</string>
    <string name="title_activity_display_message">DisplayMessage</string>
    <string name="lock">Save and Lock</string>
    <string name="restore">Restore Original</string>

</resources>